# RecordVideo

./: CMakeLists.txt  main.cpp
src/camera/: camera_wrapper.cpp
