cmake_minimum_required(VERSION 3.13)
project(SaveVideo)

set(CMAKE_CXX_STANDARD 11)

FIND_PROGRAM(CCACHE_FOUND ccache)
IF(CCACHE_FOUND)
    SET_PROPERTY(GLOBAL PROPERTY RULE_LAUNCH_COMPILE ccache)
    SET_PROPERTY(GLOBAL PROPERTY RULE_LAUNCH_LINK ccache)
    MESSAGE("< Use ccache for compiler >")
ENDIF()

FIND_PACKAGE(OpenCV 3 REQUIRED)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

FILE(GLOB_RECURSE sourcefiles "src/*.cpp")
ADD_EXECUTABLE(SaveVideo main.cpp ${sourcefiles} )
TARGET_LINK_LIBRARIES(SaveVideo ${OpenCV_LIBS})
TARGET_LINK_LIBRARIES(SaveVideo ${PROJECT_SOURCE_DIR}/libMVSDK.so)